<resources>
    <string name="app_name">Assign1</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="address_street">Address Street:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="elevation">Elevation:</string>
    <string name="address_title">Address Title:</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="great_circle_distance">Great Circle Distance</string>
    <string name="bearing">Bearing</string>
    <string name="calculate_distance_and_bearing_from">Calculate Distance and Bearing from</string>
</resources>
